# minimal_agent

./: .gitignore  LICENSE  README.md  agent.py  main.py  memory.py  models.py  pup.py  pyproject.toml  requirements.txt  test.py  test_tools.py
.github/workflows/: publish.yml
examples/: basic_example.py  custom_tool_example.py  memory_example.py  translation_example.py  weather_example.py
src/smartpup/: __init__.py  config.py  errors.py  pup.py
src/smartpup/tools/: __init__.py  base.py  env.py  registry.py
src/smartpup/tools/builtin/: __init__.py
src/smartpup/tools/builtin/datetime/: get_datetime.py
src/smartpup/tools/builtin/memory/: recall.py  remember.py
src/smartpup/tools/builtin/weather/: get_weather.py
src/smartpup/tools/datetime/: get_datetime.py
src/smartpup/tools/memory/: recall.py  remember.py
src/smartpup/tools/translate/: translate.py
tests/: test_basic.py
tools/: __init__.py  base_tool.py  models.py  registry.py
tools/builtin/datetime/: get_datetime.py
tools/builtin/memory/: recall.py  remember.py
tools/builtin/translate/: translate.py
tools/builtin/weather/: get_weather.py
tools/datetime/: get_datetime.py
tools/memory/: recall.py  remember.py
tools/weather/: get_weather.py
